[gd_scene load_steps=3 format=3 uid="uid://dq1y38xd6vww7"]

[ext_resource type="Script" path="res://ui/options.gd" id="1_rolkx"]
[ext_resource type="PackedScene" uid="uid://b8wxqvurrnxcr" path="res://ui/scene_changer.tscn" id="2_7agg4"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rolkx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SFX"

[node name="Sound" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Music"

[node name="Music" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Music volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "SFX volume"

[node name="SoundSlider" type="HSlider" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="Back" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="SceneChanger" parent="." instance=ExtResource("2_7agg4")]
target_scene = "res://ui/main_menu.tscn"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/Sound" to="." method="_on_sound_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/Music" to="." method="_on_music_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer4/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
